--- a/partials/panels/section-staff-panel.twig
+++ b/partials/panels/section-staff-panel.twig
@@ -24,6 +24,17 @@
                 cardType: "acme-",
 				template: "staff",
                 imageSize: {width: 285, height: 192},
+                imageSizes: {
+                    "mobile": {
+                        width: 285, height: 192
+                    },
+                    "mobileLrg": {
+                        width: 285, height: 192
+                    },
+                    "tablet": {
+                        width: 285, height: 192
+                    }
+                },
                 contentType: contentType,
                 containerClass: cardClasses
             }) | raw}}
