--- a/section-realestate.twig
+++ b/section-realestate.twig
@@ -45,7 +45,18 @@
                                     article: articles[articleCount], 
                                     position: (articleCount+1),
                                     template: 'property',
-                                    imageSize: {width: 636, height: 460},
+                                    imageSize: {width: 950, height: 675},
+                                    imageSizes: {
+                                        "mobile": {
+                                            width: 635, height:450
+                                        },
+                                        "mobileLrg": {
+                                            width: 635, height:450
+                                        },
+                                        "tablet" : {
+                                            width: 950, height:675
+                                        }
+                                    },
                                     containerClass: 'card-property-mobile card-property-tablet card-property-desktop card-property-highlighter'
                                 }) | raw}}
                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -59,7 +70,18 @@
                                                 article: articles[articleCount], 
                                                 position: (articleCount+1),
                                                 template: 'property',
-                                                imageSize: {width: 360, height: 270},
+                                                imageSize: {width: 459, height: 278},
+                                                imageSizes: {
+                                                    "mobile": {
+                                                        width: 550, height: 333
+                                                    },
+                                                    "mobileLrg": {
+                                                        width: 550, height: 333
+                                                    },
+                                                    "tablet": {
+                                                        width: 703, height: 425
+                                                    }
+                                                },
                                                 containerClass: 'card-property-mobile card-property-tablet card-property-desktop col-12 col-md-6 col-lg-12'
                                             }) | raw}}
                                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -73,7 +95,18 @@
                                                 article: articles[articleCount], 
                                                 position: (articleCount+1),
                                                 template: 'property',
-                                                imageSize: {width: 360, height: 270},
+                                                imageSize: {width: 459, height: 278},
+                                                imageSizes: {
+                                                    "mobile": {
+                                                        width: 550, height: 333
+                                                    },
+                                                    "mobileLrg": {
+                                                        width: 550, height: 333
+                                                    },
+                                                    "tablet": {
+                                                        width: 703, height: 425
+                                                    }
+                                                },
                                                 containerClass: 'card-property-mobile card-property-tablet card-property-desktop col-12 col-md-6 col-lg-12'
                                             }) | raw}}
                                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -102,7 +135,18 @@
                                         article: articles[articleCount], 
                                         position: (articleCount+1),
                                         template: 'property',
-                                        imageSize: {width: 360, height: 270},
+                                        imageSize: {width: 459, height: 278},
+                                        imageSizes: {
+                                            "mobile": {
+                                                width: 550, height: 333
+                                            },
+                                            "mobileLrg": {
+                                                width: 550, height: 333
+                                            },
+                                            "tablet": {
+                                                width: 703, height: 425
+                                            }
+                                        },
                                         containerClass: 'card-property-mobile card-property-tablet card-property-desktop'
                                     }) | raw}}
                                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -121,7 +165,18 @@
                                         article: articles[articleCount], 
                                         position: (articleCount+1),
                                         template: 'property',
-                                        imageSize: {width: 360, height: 270},
+                                        imageSize: {width: 459, height: 278},
+                                        imageSizes: {
+                                            "mobile": {
+                                                width: 550, height: 333
+                                            },
+                                            "mobileLrg": {
+                                                width: 550, height: 333
+                                            },
+                                            "tablet": {
+                                                width: 703, height: 425
+                                            }
+                                        },
                                         containerClass: 'card-property-mobile card-property-tablet card-property-desktop'
                                     }) | raw}}
                                 {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
