--- a/partials/panels/section-business-classified-panel.twig
+++ b/partials/panels/section-business-classified-panel.twig
@@ -36,6 +36,17 @@
                 position: (articleCount+1),
                 cardType: "acme-",
                 imageSize: {width: 285, height: 192},
+                imageSizes: {
+                    "mobile": {
+                        width: 285, height: 192
+                    },
+                    "mobileLrg": {
+                        width: 285, height: 192
+                    },
+                    "tablet": {
+                        width: 285, height: 192
+                    }
+                },
                 containerClass: cardClasses
             }) | raw}}
             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
