--- a/partials/panels/section-classified-panel.twig
+++ b/partials/panels/section-classified-panel.twig
@@ -45,6 +45,17 @@
                 position: (articleCount+1),
                 cardType: "acme-",
                 imageSize: {width: 285, height: 192},
+                imageSizes: {
+                    "mobile": {
+                        width: 285, height: 192
+                    },
+                    "mobileLrg": {
+                        width: 285, height: 192
+                    },
+                    "tablet": {
+                        width: 285, height: 192
+                    }
+                },
                 contentType: contentType,
                 containerClass: cardClasses
             }) | raw}}
