--- a/section.twig
+++ b/section.twig
@@ -53,7 +53,18 @@
                             {{this.render('partials/_single-article.twig', {
                                 article: articles[articleCount], 
                                 position: (articleCount+1),
-                                imageSize: {width: 635, height: 450},
+                                imageSize: {width: 950, height: 675},
+                                imageSizes: {
+                                    "mobile": {
+                                        width: 635, height:450
+                                    },
+                                    "mobileLrg": {
+                                        width: 635, height:450
+                                    },
+                                    "tablet" : {
+                                        width: 950, height:675
+                                    }
+                                },
                                 containerClass: "card-2-mobile card-2-tablet card-5-desktop section_firstCard"
                             }) | raw}}
                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -66,7 +77,18 @@
                                             {{this.render('partials/_single-article.twig', {
                                                 article: articles[articleCount], 
                                                 position: (articleCount+1),
-                                                imageSize: {width: 306, height: 185},
+                                                imageSize: {width: 459, height: 278},
+                                                imageSizes: {
+                                                    "mobile": {
+                                                        width: 550, height: 333
+                                                    },
+                                                    "mobileLrg": {
+                                                        width: 550, height: 333
+                                                    },
+                                                    "tablet": {
+                                                        width: 703, height: 425
+                                                    }
+                                                },
                                                 containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription"
                                             }) | raw}}
                                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -75,7 +97,18 @@
                                             {{this.render('partials/_single-article.twig', {
                                                 article: articles[articleCount], 
                                                 position: (articleCount+1),
-                                                imageSize: {width: 79, height: 79},
+                                                imageSize: {width: 120, height: 120},
+                                                imageSizes: {
+                                                    "mobile": {
+                                                        width: 120, height: 120
+                                                    },
+                                                    "mobileLrg": {
+                                                        width: 120, height: 120
+                                                    },
+                                                    "tablet" : {
+                                                        width: 120, height: 120
+                                                    }
+                                                },
                                                 containerClass: "card-12-mobile card-12-tablet card-12-desktop"
                                             }) | raw}}
                                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -84,7 +117,18 @@
                                             {{this.render('partials/_single-article.twig', {
                                                 article: articles[articleCount], 
                                                 position: (articleCount+1),
-                                                imageSize: {width: 600, height: 300},
+                                                imageSize: {width: 950, height: 675},
+                                                imageSizes: {
+                                                    "mobile": {
+                                                        width: 635, height:450
+                                                    },
+                                                    "mobileLrg": {
+                                                        width: 635, height:450
+                                                    },
+                                                    "tablet" : {
+                                                        width: 950, height:675
+                                                    }
+                                                },
                                                 containerClass: "card-1-mobile card-1-tablet card-1-desktop"
                                             }) | raw}}
                                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -97,7 +141,18 @@
                                             {{this.render('partials/_single-article.twig', {
                                                 article: articles[articleCount], 
                                                 position: (articleCount+1),
-                                                imageSize: {width: 306, height: 185},
+                                                imageSize: {width: 459, height: 278},
+                                                imageSizes: {
+                                                    "mobile": {
+                                                        width: 550, height: 333
+                                                    },
+                                                    "mobileLrg": {
+                                                        width: 550, height: 333
+                                                    },
+                                                    "tablet": {
+                                                        width: 703, height: 425
+                                                    }
+                                                },
                                                 containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription"
                                             }) | raw}}
                                             {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -131,7 +186,18 @@
                                     {{this.render('partials/_single-article.twig', {
                                         article: articles[articleCount], 
                                         position: (articleCount+1),
-                                        imageSize: {width: 600, height: 300},
+                                        imageSize: {width: 950, height: 675},
+                                        imageSizes: {
+                                            "mobile": {
+                                                width: 635, height:450
+                                            },
+                                            "mobileLrg": {
+                                                width: 635, height:450
+                                            },
+                                            "tablet" : {
+                                                width: 950, height:675
+                                            }
+                                        },
                                         containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription"
                                     }) | raw}}
                                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
@@ -150,7 +216,18 @@
                                     {{this.render('partials/_single-article.twig', {
                                         article: articles[articleCount], 
                                         position: (articleCount+1),
-                                        imageSize: {width: 600, height: 300},
+                                        imageSize: {width: 950, height: 675},
+                                        imageSizes: {
+                                            "mobile": {
+                                                width: 635, height:450
+                                            },
+                                            "mobileLrg": {
+                                                width: 635, height:450
+                                            },
+                                            "tablet" : {
+                                                width: 950, height:675
+                                            }
+                                        },
                                         containerClass: "card-2-mobile card-2-tablet card-2-desktop card-2--noDescription"
                                     }) | raw}}
                                     {% set articleCount = (dev) ? articleCount : articleCount + 1 %}
