--- a/static/sass/cards/_card-2.scss
+++ b/static/sass/cards/_card-2.scss
@@ -68,6 +68,14 @@
             }
         }
     }
+
+    &--noUserInfo {
+        .c-cards-view {
+            &__author {
+                display: none !important;
+            }
+        }
+    }
 }
 .card-2-mobile {
     @media #{$mobile} {
