--- a/user-posts.twig
+++ b/user-posts.twig
@@ -30,7 +30,18 @@
                                     <div class="col-12 left-border">
                                         {{this.render('partials/_single-article.twig', {
                                             article: userArticles[0], 
-                                            imageSize: {width:508, height:324},
+                                            imageSize: {width: 950, height: 675},
+                                            imageSizes: {
+                                                "mobile": {
+                                                    width: 635, height:450
+                                                },
+                                                "mobileLrg": {
+                                                    width: 635, height:450
+                                                },
+                                                "tablet" : {
+                                                    width: 950, height:675
+                                                }
+                                            },
                                             containerClass: 'card-2-mobile card-2-tablet card-7-desktop'
                                         }) | raw}}
                                     </div>
@@ -43,7 +54,18 @@
                                     <div class="col-12 col-lg-4 left-border">
                                         {{this.render('partials/_single-article.twig', {
                                             article: userArticles[i], 
-                                            imageSize: {width:508, height:324},
+                                            imageSize: {width: 459, height: 278},
+                                            imageSizes: {
+                                                "mobile": {
+                                                    width: 550, height: 333
+                                                },
+                                                "mobileLrg": {
+                                                    width: 550, height: 333
+                                                },
+                                                "tablet": {
+                                                    width: 703, height: 425
+                                                }
+                                            },
                                             containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
                                         }) | raw}}
                                     </div>
@@ -56,7 +78,18 @@
                                     <div class="col-12 col-lg-4 left-border">
                                         {{this.render('partials/_single-article.twig', {
                                             article: userArticles[i], 
-                                            imageSize: {width:508, height:324},
+                                            imageSize: {width: 459, height: 278},
+                                            imageSizes: {
+                                                "mobile": {
+                                                    width: 550, height: 333
+                                                },
+                                                "mobileLrg": {
+                                                    width: 550, height: 333
+                                                },
+                                                "tablet": {
+                                                    width: 703, height: 425
+                                                }
+                                            },
                                             containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
                                         }) | raw}}
                                     </div>
@@ -74,7 +107,18 @@
                                     <div class="col-12 col-lg-4 left-border">
                                         {{this.render('partials/_single-article.twig', {
                                             article: userArticles[i], 
-                                            imageSize: {width:508, height:324},
+                                            imageSize: {width: 459, height: 278},
+                                            imageSizes: {
+                                                "mobile": {
+                                                    width: 550, height: 333
+                                                },
+                                                "mobileLrg": {
+                                                    width: 550, height: 333
+                                                },
+                                                "tablet": {
+                                                    width: 703, height: 425
+                                                }
+                                            },
                                             containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
                                         }) | raw}}
                                     </div>
@@ -87,7 +131,18 @@
                                     <div class="col-12 col-lg-4 left-border">
                                         {{this.render('partials/_single-article.twig', {
                                             article: userArticles[i], 
-                                            imageSize: {width:508, height:324},
+                                            imageSize: {width: 459, height: 278},
+                                            imageSizes: {
+                                                "mobile": {
+                                                    width: 550, height: 333
+                                                },
+                                                "mobileLrg": {
+                                                    width: 550, height: 333
+                                                },
+                                                "tablet": {
+                                                    width: 703, height: 425
+                                                }
+                                            },
                                             containerClass: 'card-2-mobile card-2-tablet card-2-desktop card-2--noDescription'
                                         }) | raw}}
                                     </div>
