--- a/static/sass/components/_component.advertisment.scss
+++ b/static/sass/components/_component.advertisment.scss
@@ -7,7 +7,7 @@
         }
     }
     &__mrec{
-        &-1,&-2,&-3,&-4{
+        &-1,&-2,&-3,&-4,&-5,&-6,&-7,&-8,&-9{
             margin-bottom: 30px;
             min-width: 300px;
         }
