--- a/layout-subscribe.twig
+++ b/layout-subscribe.twig
@@ -413,3 +413,24 @@
     }); #}
 
 </script>
+
+
+
+{% set captcha = config.paywall.captcha.active is defined ? config.paywall.captcha.active : false %}
+{% set captchaOn = config.paywall.captcha.on is defined ? config.paywall.captcha.on : 'all' %}
+
+{% if captcha %}
+    {% if (captchaOn == 'trial' and plan.trial_status == '1') or captchaOn == 'all' %}
+        {% if networkData.thirdPartyIntegrations['recaptcha'] | length > 0 and networkData.thirdPartyIntegrations['recaptcha']['site_key'] != '' %}
+            {% set site_key = networkData.thirdPartyIntegrations['recaptcha']['site_key'] %}
+            <script src="https://www.google.com/recaptcha/api.js?render={{site_key}}"></script>
+            <script>
+                if (typeof window.Acme === "undefined") {
+                    window.Acme = {};
+                }
+
+                window.Acme.captcha_site_key = "{{site_key}}";
+            </script>
+        {% endif %}
+    {% endif %}
+{% endif %}
