--- a/static/sass/components/_component.article.scss
+++ b/static/sass/components/_component.article.scss
@@ -1,5 +1,4 @@
 .c-article {
-
   &__price {
     font-family: $primaryFont;
     font-weight: $weightMedium;
@@ -30,7 +29,7 @@
         margin-right: 8px;
 
         &--fill {
-          svg *{
+          svg * {
             fill: var(--sec-color) !important;
           }
         }
@@ -174,8 +173,12 @@
     &__paywall-container {
       position: relative;
       &:before {
-        content: '';
-        background-image: linear-gradient(to top, #ffffff 19%, rgba(255, 255, 255, 0.8) 45%);
+        content: "";
+        background-image: linear-gradient(
+          to top,
+          #ffffff 19%,
+          rgba(255, 255, 255, 0.8) 45%
+        );
         width: 100%;
         height: 100%;
         position: absolute;
@@ -241,6 +244,10 @@
           font-family: $secondaryFont !important;
           word-wrap: break-word;
         }
+      }
+
+      b {
+        font-weight: $weightBold !important;
       }
     }
 
@@ -357,7 +364,7 @@
         li {
           &:before {
             background-color: var(--white);
-            border:1px solid var(--sec-color);
+            border: 1px solid var(--sec-color);
           }
         }
       }
@@ -365,7 +372,7 @@
 
     ol {
       li {
-        list-style-type:  decimal !important;
+        list-style-type: decimal !important;
         list-style-position: outside;
         margin-left: 20px;
       }
@@ -406,7 +413,9 @@
         margin-bottom: 0px !important;
         line-height: 1.45;
 
-        strong,span,b {
+        strong,
+        span,
+        b {
           color: $black;
           font-family: $primaryFont !important;
           font-size: 22px !important;
@@ -414,7 +423,7 @@
           margin-bottom: 0px !important;
           line-height: 1.45;
         }
-  
+
         a {
           color: var(--sec-color);
           font-family: $primaryFont !important;
@@ -425,7 +434,9 @@
         }
       }
 
-      strong,span,bold {
+      strong,
+      span,
+      bold {
         color: $black;
         font-family: $primaryFont !important;
         font-size: 22px !important;
@@ -481,7 +492,7 @@
     figure {
       position: relative;
       @include inline-flex;
-      @include flex-direction(column,vertical);
+      @include flex-direction(column, vertical);
       margin-bottom: 20px !important;
       overflow: hidden;
 
@@ -564,5 +575,5 @@
 }
 
 .c-propertyarticle__map * {
-    width: 100% !important;
+  width: 100% !important;
 }
